--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,8 +7,10 @@ environment:
   sdk: '>=2.14.3 <3.0.0'
 
 
-# dependencies:
-#   path: ^1.8.0
+dependencies:
+   path: ^1.8.0
+
 
 dev_dependencies:
   lints: ^1.0.0
+  image: ^3.0.8
